kustomize/mako-shell/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mako-shell
spec:
  type: ClusterIP
  ports:
    - port: 4200
      targetPort: 4200
      protocol: TCP
      name: http
  selector:
    app: mako-shell
