kustomize/mako-shell/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mako-shell
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mako-bank.com
      secretName: mako-shell-tls
  rules:
    - host: mako-bank.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mako-shell
                port:
                  name: http
